--- a/store.html
+++ b/store.html
@@ -428,140 +428,131 @@ html, body {
   </div>
 
 </section>
-<!-- ================= MEN ================= -->
 <section id="men" class="store-section">
 
-  <!-- MEN BANNER -->
-  <div class="section-banner">
-    MEN
-    <small>Coming Soon</small>
-  </div>
-
-  <!-- MEN EDITORIAL IMAGE (TOP) -->
-  <div class="editorial">
-    <div class="editorial-img">MEN EDITORIAL IMAGE PLACEHOLDER</div>
-    <div class="editorial-caption">MEN — CAMPAIGN VISUAL</div>
-  </div>
-
-  <!-- MEN PRODUCT GRID -->
+  <!-- T-SHIRTS -->
+  <div class="category-banner">MEN — T-SHIRTS</div>
   <div class="product-grid">
-
-    <!-- SHIRTS -->
-    <div class="product-card coming-soon">
-      <span class="coming-soon-badge">COMING SOON</span>
-      <div class="placeholder-img">IMAGE</div>
-      <div class="product-meta"><h4>T-SHIRTS</h4></div>
-    </div>
-
-    <div class="product-card coming-soon">
-      <span class="coming-soon-badge">COMING SOON</span>
-      <div class="placeholder-img">IMAGE</div>
-      <div class="product-meta"><h4>POLO SHIRTS</h4></div>
-    </div>
-
-    <div class="product-card coming-soon">
-      <span class="coming-soon-badge">COMING SOON</span>
-      <div class="placeholder-img">IMAGE</div>
-      <div class="product-meta"><h4>TANK TOPS</h4></div>
-    </div>
-
-    <div class="product-card coming-soon">
-      <span class="coming-soon-badge">COMING SOON</span>
-      <div class="placeholder-img">IMAGE</div>
-      <div class="product-meta"><h4>3/4 SLEEVE SHIRTS</h4></div>
-    </div>
-
-    <div class="product-card coming-soon">
-      <span class="coming-soon-badge">COMING SOON</span>
-      <div class="placeholder-img">IMAGE</div>
-      <div class="product-meta"><h4>LONG SLEEVE SHIRTS</h4></div>
-    </div>
-
-    <div class="product-card coming-soon">
-      <span class="coming-soon-badge">COMING SOON</span>
-      <div class="placeholder-img">IMAGE</div>
-      <div class="product-meta"><h4>EMBROIDERED SHIRTS</h4></div>
-    </div>
-
-    <!-- OUTERWEAR -->
-    <div class="product-card coming-soon">
-      <span class="coming-soon-badge">COMING SOON</span>
-      <div class="placeholder-img">IMAGE</div>
-      <div class="product-meta"><h4>JACKETS</h4></div>
-    </div>
-
-    <div class="product-card coming-soon">
-      <span class="coming-soon-badge">COMING SOON</span>
-      <div class="placeholder-img">IMAGE</div>
-      <div class="product-meta"><h4>VESTS</h4></div>
-    </div>
-
-    <!-- SWEATSHIRTS / HOODIES / KNITWEAR -->
-    <div class="product-card coming-soon">
-      <span class="coming-soon-badge">COMING SOON</span>
-      <div class="placeholder-img">IMAGE</div>
-      <div class="product-meta"><h4>SWEATSHIRTS</h4></div>
-    </div>
-
-    <div class="product-card coming-soon">
-      <span class="coming-soon-badge">COMING SOON</span>
-      <div class="placeholder-img">IMAGE</div>
-      <div class="product-meta"><h4>HOODIES</h4></div>
-    </div>
-
-    <div class="product-card coming-soon">
-      <span class="coming-soon-badge">COMING SOON</span>
-      <div class="placeholder-img">IMAGE</div>
-      <div class="product-meta"><h4>KNITWEAR</h4></div>
-    </div>
-
-    <!-- BOTTOMS -->
-    <div class="product-card coming-soon">
-      <span class="coming-soon-badge">COMING SOON</span>
-      <div class="placeholder-img">IMAGE</div>
-      <div class="product-meta"><h4>SWEATPANTS & JOGGERS</h4></div>
-    </div>
-
-    <div class="product-card coming-soon">
-      <span class="coming-soon-badge">COMING SOON</span>
-      <div class="placeholder-img">IMAGE</div>
-      <div class="product-meta"><h4>UNDERWEAR</h4></div>
-    </div>
-
-    <div class="product-card coming-soon">
-      <span class="coming-soon-badge">COMING SOON</span>
-      <div class="placeholder-img">IMAGE</div>
-      <div class="product-meta"><h4>LEGGINGS</h4></div>
-    </div>
-
-    <div class="product-card coming-soon">
-      <span class="coming-soon-badge">COMING SOON</span>
-      <div class="placeholder-img">IMAGE</div>
-      <div class="product-meta"><h4>SHORTS</h4></div>
-    </div>
-
-    <div class="product-card coming-soon">
-      <span class="coming-soon-badge">COMING SOON</span>
-      <div class="placeholder-img">IMAGE</div>
-      <div class="product-meta"><h4>PANTS</h4></div>
-    </div>
-
-    <div class="product-card coming-soon">
-      <span class="coming-soon-badge">COMING SOON</span>
-      <div class="placeholder-img">IMAGE</div>
-      <div class="product-meta"><h4>SWIMWEAR</h4></div>
-    </div>
-
+    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>T-SHIRTS</h4></div></div>
+    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>T-SHIRTS</h4></div></div>
+    <div class="editorial-card">MEN T-SHIRTS EDITORIAL IMAGE</div>
   </div>
 
-  <!-- MEN EDITORIAL IMAGE (BOTTOM) -->
-  <div class="editorial">
-    <div class="editorial-img">MEN SECOND EDITORIAL PLACEHOLDER</div>
-    <div class="editorial-caption">MEN — FUTURE DROP</div>
+  <!-- POLO SHIRTS -->
+  <div class="category-banner">MEN — POLO SHIRTS</div>
+  <div class="product-grid">
+    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>POLO SHIRTS</h4></div></div>
+    <div class="editorial-card">MEN POLO EDITORIAL IMAGE</div>
+  </div>
+
+  <!-- TANK TOPS -->
+  <div class="category-banner">MEN — TANK TOPS</div>
+  <div class="product-grid">
+    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>TANK TOPS</h4></div></div>
+    <div class="editorial-card">MEN TANK TOPS EDITORIAL IMAGE</div>
+  </div>
+
+  <!-- 3/4 SLEEVE SHIRTS -->
+  <div class="category-banner">MEN — 3/4 SLEEVE SHIRTS</div>
+  <div class="product-grid">
+    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>3/4 SLEEVE SHIRTS</h4></div></div>
+    <div class="editorial-card">MEN 3/4 SLEEVE EDITORIAL IMAGE</div>
+  </div>
+
+  <!-- LONG SLEEVE SHIRTS -->
+  <div class="category-banner">MEN — LONG SLEEVE SHIRTS</div>
+  <div class="product-grid">
+    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>LONG SLEEVE SHIRTS</h4></div></div>
+    <div class="editorial-card">MEN LONG SLEEVE EDITORIAL IMAGE</div>
+  </div>
+
+  <!-- EMBROIDERED SHIRTS -->
+  <div class="category-banner">MEN — EMBROIDERED SHIRTS</div>
+  <div class="product-grid">
+    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>EMBROIDERED SHIRTS</h4></div></div>
+    <div class="editorial-card">MEN EMBROIDERED EDITORIAL IMAGE</div>
+  </div>
+
+  <!-- JACKETS -->
+  <div class="category-banner">MEN — JACKETS</div>
+  <div class="product-grid">
+    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>JACKETS</h4></div></div>
+    <div class="editorial-card">MEN JACKETS EDITORIAL IMAGE</div>
+  </div>
+
+  <!-- VESTS -->
+  <div class="category-banner">MEN — VESTS</div>
+  <div class="product-grid">
+    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>VESTS</h4></div></div>
+    <div class="editorial-card">MEN VESTS EDITORIAL IMAGE</div>
+  </div>
+
+  <!-- SWEATSHIRTS -->
+  <div class="category-banner">MEN — SWEATSHIRTS</div>
+  <div class="product-grid">
+    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>SWEATSHIRTS</h4></div></div>
+    <div class="editorial-card">MEN SWEATSHIRTS EDITORIAL IMAGE</div>
+  </div>
+
+  <!-- HOODIES -->
+  <div class="category-banner">MEN — HOODIES</div>
+  <div class="product-grid">
+    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>HOODIES</h4></div></div>
+    <div class="editorial-card">MEN HOODIES EDITORIAL IMAGE</div>
+  </div>
+
+  <!-- KNITWEAR -->
+  <div class="category-banner">MEN — KNITWEAR</div>
+  <div class="product-grid">
+    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>KNITWEAR</h4></div></div>
+    <div class="editorial-card">MEN KNITWEAR EDITORIAL IMAGE</div>
+  </div>
+
+  <!-- SWEATPANTS & JOGGERS -->
+  <div class="category-banner">MEN — SWEATPANTS & JOGGERS</div>
+  <div class="product-grid">
+    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>SWEATPANTS & JOGGERS</h4></div></div>
+    <div class="editorial-card">MEN SWEATPANTS EDITORIAL IMAGE</div>
+  </div>
+
+  <!-- UNDERWEAR -->
+  <div class="category-banner">MEN — UNDERWEAR</div>
+  <div class="product-grid">
+    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>UNDERWEAR</h4></div></div>
+    <div class="editorial-card">MEN UNDERWEAR EDITORIAL IMAGE</div>
+  </div>
+
+  <!-- LEGGINGS -->
+  <div class="category-banner">MEN — LEGGINGS</div>
+  <div class="product-grid">
+    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>LEGGINGS</h4></div></div>
+    <div class="editorial-card">MEN LEGGINGS EDITORIAL IMAGE</div>
+  </div>
+
+  <!-- SHORTS -->
+  <div class="category-banner">MEN — SHORTS</div>
+  <div class="product-grid">
+    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>SHORTS</h4></div></div>
+    <div class="editorial-card">MEN SHORTS EDITORIAL IMAGE</div>
+  </div>
+
+  <!-- PANTS -->
+  <div class="category-banner">MEN — PANTS</div>
+  <div class="product-grid">
+    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>PANTS</h4></div></div>
+    <div class="editorial-card">MEN PANTS EDITORIAL IMAGE</div>
+  </div>
+
+  <!-- SWIMWEAR -->
+  <div class="category-banner">MEN — SWIMWEAR</div>
+  <div class="product-grid">
+    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>SWIMWEAR</h4></div></div>
+    <div class="editorial-card">MEN SWIMWEAR EDITORIAL IMAGE</div>
   </div>
 
 </section>
-<!-- ================= END MEN ================= -->
+
+
 
 
 
