--- a/store.html
+++ b/store.html
@@ -303,254 +303,106 @@ html, body {
 <div class="page-scroll">
     <div class="page-inner">
 
-<!-- ================= WINTER DROP ================= -->
-<section class="store-section" id="winter-drop">
+<section id="men" class="store-section">
 
-  <!-- HERO / INTRO PLACEHOLDER -->
+  <!-- MEN BANNER -->
   <div class="section-banner">
-    WINTER DROP — HERO IMAGE PLACEHOLDER
+    MEN — BANNER PLACEHOLDER
     <small>Replace with campaign imagery</small>
   </div>
 
-  <!-- WOMEN -->
-  <div class="grid-label">WOMEN</div>
-  <div class="product-grid">
-    <div class="product-card coming-soon">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
-    <div class="product-card coming-soon">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
-    <div class="product-card coming-soon">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
-    <div class="product-card coming-soon">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
-  </div>
+  <div class="men-section">
 
-  <!-- EDITORIAL PLACEHOLDER -->
-  <div class="editorial">
-    <div class="editorial-img">WINTER DROP — EDITORIAL IMAGE PLACEHOLDER</div>
-    <div class="editorial-caption">EDITORIAL COPY PLACEHOLDER</div>
-  </div>
+    <!-- CATEGORY ROW -->
+    <div class="men-row"><div class="men-category">T-shirts</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
 
-  <!-- MEN -->
-  <div class="grid-label">MEN</div>
-  <div class="product-grid">
-    <div class="product-card coming-soon">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
-    <div class="product-card coming-soon">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
-    <div class="product-card coming-soon">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
-    <div class="product-card coming-soon">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
-  </div>
+    <div class="men-row"><div class="men-category">Printed shirts</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
 
+    <div class="men-row"><div class="men-category">Polo shirts</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Tank tops</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">3/4 sleeve shirts</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Long sleeve shirts</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Embroidered shirts</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Jackets & vests</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Hoodies</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Sweatshirts</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Knitwear</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Sweatpants & joggers</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Underwear</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Leggings</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Shorts</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Pants</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Swimwear</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+  </div>
 </section>
-<!-- ================= END WINTER DROP ================= -->
 
-        <!-- ================= P&V DROP ================= -->
-<section id="pv-drop" class="store-section">
 
-  <div class="section-banner">
-    PANTHERS & VAMPIRES — DROP
-    <small>Campaign banner placeholder</small>
-  </div>
-
-  <div class="grid-label">WOMEN — P&V DROP</div>
-
-  <div class="product-grid">
-    <div class="product-card">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
-    <div class="product-card">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
-    <div class="product-card">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
-    <div class="product-card">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
-  </div>
-
-  <div class="editorial">
-    <div class="editorial-img">P&V EDITORIAL IMAGE PLACEHOLDER</div>
-    <div class="editorial-caption">PANTHERS & VAMPIRES CAMPAIGN SLOT</div>
-  </div>
-
-  <div class="grid-label">MEN — P&V DROP</div>
-
-  <div class="product-grid">
-    <div class="product-card">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
-    <div class="product-card">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
-    <div class="product-card">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
-    <div class="product-card">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
-  </div>
-
-</section>
-
-<!-- ================= SAVED ITEMS ================= -->
-<section id="saved-items" class="store-section">
-
-  <div class="section-banner">
-    SAVED ITEMS
-    <small>Products you’ve saved will appear here</small>
-  </div>
-
-  <div class="product-grid">
-    <div class="product-card">
-      <div class="placeholder-img">SAVED PRODUCT</div>
-    </div>
-    <div class="product-card">
-      <div class="placeholder-img">SAVED PRODUCT</div>
-    </div>
-    <div class="product-card">
-      <div class="placeholder-img">SAVED PRODUCT</div>
-    </div>
-    <div class="product-card">
-      <div class="placeholder-img">SAVED PRODUCT</div>
-    </div>
-  </div>
-
-</section>
-<section id="men" class="store-section">
-
-  <!-- T-SHIRTS -->
-  <div class="category-banner">MEN — T-SHIRTS</div>
-  <div class="product-grid">
-    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>T-SHIRTS</h4></div></div>
-    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>T-SHIRTS</h4></div></div>
-    <div class="editorial-card">MEN T-SHIRTS EDITORIAL IMAGE</div>
-  </div>
-
-  <!-- POLO SHIRTS -->
-  <div class="category-banner">MEN — POLO SHIRTS</div>
-  <div class="product-grid">
-    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>POLO SHIRTS</h4></div></div>
-    <div class="editorial-card">MEN POLO EDITORIAL IMAGE</div>
-  </div>
-
-  <!-- TANK TOPS -->
-  <div class="category-banner">MEN — TANK TOPS</div>
-  <div class="product-grid">
-    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>TANK TOPS</h4></div></div>
-    <div class="editorial-card">MEN TANK TOPS EDITORIAL IMAGE</div>
-  </div>
-
-  <!-- 3/4 SLEEVE SHIRTS -->
-  <div class="category-banner">MEN — 3/4 SLEEVE SHIRTS</div>
-  <div class="product-grid">
-    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>3/4 SLEEVE SHIRTS</h4></div></div>
-    <div class="editorial-card">MEN 3/4 SLEEVE EDITORIAL IMAGE</div>
-  </div>
-
-  <!-- LONG SLEEVE SHIRTS -->
-  <div class="category-banner">MEN — LONG SLEEVE SHIRTS</div>
-  <div class="product-grid">
-    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>LONG SLEEVE SHIRTS</h4></div></div>
-    <div class="editorial-card">MEN LONG SLEEVE EDITORIAL IMAGE</div>
-  </div>
-
-  <!-- EMBROIDERED SHIRTS -->
-  <div class="category-banner">MEN — EMBROIDERED SHIRTS</div>
-  <div class="product-grid">
-    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>EMBROIDERED SHIRTS</h4></div></div>
-    <div class="editorial-card">MEN EMBROIDERED EDITORIAL IMAGE</div>
-  </div>
-
-  <!-- JACKETS -->
-  <div class="category-banner">MEN — JACKETS</div>
-  <div class="product-grid">
-    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>JACKETS</h4></div></div>
-    <div class="editorial-card">MEN JACKETS EDITORIAL IMAGE</div>
-  </div>
-
-  <!-- VESTS -->
-  <div class="category-banner">MEN — VESTS</div>
-  <div class="product-grid">
-    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>VESTS</h4></div></div>
-    <div class="editorial-card">MEN VESTS EDITORIAL IMAGE</div>
-  </div>
-
-  <!-- SWEATSHIRTS -->
-  <div class="category-banner">MEN — SWEATSHIRTS</div>
-  <div class="product-grid">
-    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>SWEATSHIRTS</h4></div></div>
-    <div class="editorial-card">MEN SWEATSHIRTS EDITORIAL IMAGE</div>
-  </div>
-
-  <!-- HOODIES -->
-  <div class="category-banner">MEN — HOODIES</div>
-  <div class="product-grid">
-    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>HOODIES</h4></div></div>
-    <div class="editorial-card">MEN HOODIES EDITORIAL IMAGE</div>
-  </div>
-
-  <!-- KNITWEAR -->
-  <div class="category-banner">MEN — KNITWEAR</div>
-  <div class="product-grid">
-    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>KNITWEAR</h4></div></div>
-    <div class="editorial-card">MEN KNITWEAR EDITORIAL IMAGE</div>
-  </div>
-
-  <!-- SWEATPANTS & JOGGERS -->
-  <div class="category-banner">MEN — SWEATPANTS & JOGGERS</div>
-  <div class="product-grid">
-    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>SWEATPANTS & JOGGERS</h4></div></div>
-    <div class="editorial-card">MEN SWEATPANTS EDITORIAL IMAGE</div>
-  </div>
-
-  <!-- UNDERWEAR -->
-  <div class="category-banner">MEN — UNDERWEAR</div>
-  <div class="product-grid">
-    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>UNDERWEAR</h4></div></div>
-    <div class="editorial-card">MEN UNDERWEAR EDITORIAL IMAGE</div>
-  </div>
-
-  <!-- LEGGINGS -->
-  <div class="category-banner">MEN — LEGGINGS</div>
-  <div class="product-grid">
-    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>LEGGINGS</h4></div></div>
-    <div class="editorial-card">MEN LEGGINGS EDITORIAL IMAGE</div>
-  </div>
-
-  <!-- SHORTS -->
-  <div class="category-banner">MEN — SHORTS</div>
-  <div class="product-grid">
-    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>SHORTS</h4></div></div>
-    <div class="editorial-card">MEN SHORTS EDITORIAL IMAGE</div>
-  </div>
-
-  <!-- PANTS -->
-  <div class="category-banner">MEN — PANTS</div>
-  <div class="product-grid">
-    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>PANTS</h4></div></div>
-    <div class="editorial-card">MEN PANTS EDITORIAL IMAGE</div>
-  </div>
-
-  <!-- SWIMWEAR -->
-  <div class="category-banner">MEN — SWIMWEAR</div>
-  <div class="product-grid">
-    <div class="product-card coming-soon"><span class="coming-soon-badge">COMING SOON</span><div class="placeholder-img"></div><div class="product-meta"><h4>SWIMWEAR</h4></div></div>
-    <div class="editorial-card">MEN SWIMWEAR EDITORIAL IMAGE</div>
-  </div>
-
-</section>
 
 
 
