--- a/store.html
+++ b/store.html
@@ -280,6 +280,69 @@ html, body {
   font-size: 0.7rem;
   background: rgba(0,0,0,0.45);
 }
+
+/* existing CSS you pasted */
+.coming-soon::after {
+  content: "COMING SOON";
+  position: absolute;
+  inset: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #ff3b3b;
+  letter-spacing: 0.36em;
+  font-size: 0.7rem;
+  background: rgba(0,0,0,0.45);
+}
+
+/* ⬇️ ADD THE MEN SECTION CSS HERE ⬇️ */
+.men-section { margin-top: 40px; }
+
+.men-row {
+  display: grid;
+  grid-template-columns: 240px 1fr;
+  gap: 40px;
+  margin-bottom: 60px;
+}
+
+.men-category {
+  font-size: 0.7rem;
+  letter-spacing: 0.28em;
+  text-transform: uppercase;
+  color: #e8e4d8;
+  padding-top: 10px;
+}
+
+.men-grid {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 22px;
+}
+
+.box {
+  height: 260px;
+  background: rgba(255,255,255,0.04);
+  border: 1px solid rgba(212,175,55,0.25);
+  position: relative;
+}
+
+.box span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  background: #ffffff;
+  color: #ff3b3b;
+  font-size: 0.6rem;
+  letter-spacing: 0.32em;
+  text-align: center;
+  padding: 8px 0;
+  text-transform: uppercase;
+}
+</style>
+
+
+    
 </style>
 </head>
 
