--- a/store.html
+++ b/store.html
@@ -573,6 +573,123 @@ html, body {
 
   </div>
 </section>
+<section id="women" class="store-section">
+
+  <!-- WOMEN BANNER -->
+  <div class="section-banner">
+    WOMEN — BANNER PLACEHOLDER
+    <small>Replace with campaign imagery</small>
+  </div>
+
+  <div class="men-section">
+
+    <div class="men-row"><div class="men-category">T-shirts</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Polo shirts</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Printed shirts</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Tank tops</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Crop tops</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Embroidered shirts</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">3/4 sleeve shirts</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Long sleeve shirts</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Dresses</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Knitwear</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Jackets & vests</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Hoodies</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Sweatshirts</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Sweatpants & joggers</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Leggings</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Skirts</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Shorts</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Pants</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Sports bras</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Swimwear</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+    <div class="men-row"><div class="men-category">Sleepwear</div><div class="men-grid">
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+      <div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div><div class="box"><span>COMING SOON</span></div>
+    </div></div>
+
+  </div>
+</section>
 
 
 
