--- a/about.html
+++ b/about.html
@@ -241,11 +241,12 @@ body {
             <a href="index.html">Home</a>
             <a href="movement.html">Movement</a>
             <a href="patchbaby.html">Patch Baby</a>
-            <a href="book.html">The Book</a>
-            <a href="store.html">Store</a>
-            <a href="checkout.html">Checkout</a>
-            <a href="about.html">About</a>
             <a class="featured" href="signature-apparel-premiere.html">Signature Apparel Premiere</a>
+            <a class="featured" href="book.html">The Book</a>
+            <a href="store.html">Store</a>
+            <a href="music.html">MUSIC</a>
+            <a href="about.html">About</a>
+            <a href="checkout.html">Checkout</a>
         </div>
     </div>
 </nav>
