--- a/store.html
+++ b/store.html
@@ -409,47 +409,68 @@ html, body {
   </div>
 
   <!-- WOMEN -->
-  <div class="grid-label">WOMEN</div>
-  <div class="product-grid">
-    <div class="product-card coming-soon">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
-    <div class="product-card coming-soon">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
-    <div class="product-card coming-soon">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
-    <div class="product-card coming-soon">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
+<!-- ================= WINTER DROP ================= -->
+<section class="store-section" id="winter-drop">
+
+  <!-- HERO / INTRO PLACEHOLDER -->
+  <div class="section-banner">
+    WINTER DROP — HERO IMAGE PLACEHOLDER
+    <small>Replace with campaign imagery</small>
   </div>
 
-  <!-- EDITORIAL PLACEHOLDER -->
+  <!-- PATCH BABY JOGGER — WOMEN -->
+  <div class="grid-label">PATCH BABY JOGGER — WOMEN</div>
+  <div class="product-grid">
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+  </div>
+
+  <!-- PATCH BABY JOGGER — MEN -->
+  <div class="grid-label">PATCH BABY JOGGER — MEN</div>
+  <div class="product-grid">
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+  </div>
+
+  <!-- EDITORIAL -->
   <div class="editorial">
     <div class="editorial-img">WINTER DROP — EDITORIAL IMAGE PLACEHOLDER</div>
     <div class="editorial-caption">EDITORIAL COPY PLACEHOLDER</div>
   </div>
 
-  <!-- MEN -->
-  <div class="grid-label">MEN</div>
+  <!-- PATCH BABY STREETWEAR — WOMEN -->
+  <div class="grid-label">PATCH BABY STREETWEAR — WOMEN</div>
   <div class="product-grid">
-    <div class="product-card coming-soon">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
-    <div class="product-card coming-soon">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
-    <div class="product-card coming-soon">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
-    <div class="product-card coming-soon">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+  </div>
+
+  <!-- PATCH BABY STREETWEAR — MEN -->
+  <div class="grid-label">PATCH BABY STREETWEAR — MEN</div>
+  <div class="product-grid">
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
   </div>
 
 </section>
 <!-- ================= END WINTER DROP ================= -->
+
 
         
 
