--- a/store.html
+++ b/store.html
@@ -384,14 +384,15 @@ html, body {
 <nav class="top-nav">
     <div class="nav-scroll">
         <div class="nav-links">
-            <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
             <a href="movement.html">Movement</a>
             <a href="patchbaby.html">Patch Baby</a>
-            <a href="book.html">The Book</a>
+            <a class="featured" href="signature-apparel-premiere.html">Signature Apparel Premiere</a>
+            <a class="featured" href="book.html">The Book</a>
             <a href="store.html">Store</a>
-            <a href="checkout.html">Checkout</a>
+            <a href="music.html">MUSIC</a>
             <a href="about.html">About</a>
-            <a class="featured" href="signature-apparel-premiere.html">Featured Apparel · Premiere</a>
+            <a href="checkout.html">Checkout</a>
         </div>
     </div>
 </nav>
@@ -474,54 +475,68 @@ html, body {
 
         
 
-        <!-- ================= P&V DROP ================= -->
-<section id="pv-drop" class="store-section">
+      <!-- ================= PANTHERS & VAMPIRES — WINTER DROP ================= -->
+<section class="store-section" id="pv-winter-drop">
 
+  <!-- HERO / INTRO PLACEHOLDER -->
   <div class="section-banner">
-    PANTHERS & VAMPIRES — DROP
-    <small>Campaign banner placeholder</small>
+    PANTHERS & VAMPIRES — WINTER DROP
+    <small>Replace with campaign imagery</small>
   </div>
 
-  <div class="grid-label">WOMEN — P&V DROP</div>
-
+  <!-- P&V JOGGER — WOMEN -->
+  <div class="grid-label">PANTHERS & VAMPIRES JOGGER — WOMEN</div>
   <div class="product-grid">
-    <div class="product-card">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
-    <div class="product-card">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
-    <div class="product-card">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
-    <div class="product-card">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
   </div>
 
+  <!-- P&V JOGGER — MEN -->
+  <div class="grid-label">PANTHERS & VAMPIRES JOGGER — MEN</div>
+  <div class="product-grid">
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+  </div>
+
+  <!-- EDITORIAL -->
   <div class="editorial">
-    <div class="editorial-img">P&V EDITORIAL IMAGE PLACEHOLDER</div>
-    <div class="editorial-caption">PANTHERS & VAMPIRES CAMPAIGN SLOT</div>
+    <div class="editorial-img">PANTHERS & VAMPIRES — EDITORIAL IMAGE PLACEHOLDER</div>
+    <div class="editorial-caption">EDITORIAL COPY PLACEHOLDER</div>
   </div>
 
-  <div class="grid-label">MEN — P&V DROP</div>
-
+  <!-- P&V STREETWEAR — WOMEN -->
+  <div class="grid-label">PANTHERS & VAMPIRES STREETWEAR — WOMEN</div>
   <div class="product-grid">
-    <div class="product-card">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
-    <div class="product-card">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
-    <div class="product-card">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
-    <div class="product-card">
-      <div class="placeholder-img">PRODUCT PLACEHOLDER</div>
-    </div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+  </div>
+
+  <!-- P&V STREETWEAR — MEN -->
+  <div class="grid-label">PANTHERS & VAMPIRES STREETWEAR — MEN</div>
+  <div class="product-grid">
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
   </div>
 
 </section>
+<!-- ================= END PANTHERS & VAMPIRES — WINTER DROP ================= -->
+
 
 
         
