--- a/signature-apparel-premiere2.html
+++ b/signature-apparel-premiere2.html
@@ -685,14 +685,15 @@ html, body {
 <nav class="top-nav">
     <div class="nav-scroll">
         <div class="nav-links">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="movement.html">Movement</a>
             <a href="patchbaby.html">Patch Baby</a>
-            <a href="book.html">The Book</a>
+            <a class="featured" href="signature-apparel-premiere.html">Signature Apparel Premiere</a>
+            <a class="featured" href="book.html">The Book</a>
             <a href="store.html">Store</a>
-            <a href="checkout.html">Checkout</a>
+            <a href="music.html">MUSIC</a>
             <a href="about.html">About</a>
-            <a class="featured" href="signature-apparel-premiere.html">Featured Apparel · Premiere</a>
+            <a href="checkout.html">Checkout</a>
         </div>
     </div>
 </nav>
