--- a/index.html
+++ b/index.html
@@ -247,14 +247,15 @@ html, body { width:100%; height:100%; background:#000; overflow:hidden; }
 <nav class="top-nav">
     <div class="nav-scroll">
         <div class="nav-links">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="movement.html">Movement</a>
             <a href="patchbaby.html">Patch Baby</a>
-            <a href="book.html">The Book</a>
-            <a href="store.html">Store</a>
-            <a href="checkout.html">Checkout</a>
-            <a href="about.html">About</a>
             <a class="featured" href="signature-apparel-premiere.html">Signature Apparel Premiere</a>
+            <a class="featured" href="book.html">The Book</a>
+            <a href="store.html">Store</a>
+            <a href="music.html">MUSIC</a>
+            <a href="about.html">About</a>
+            <a href="checkout.html">Checkout</a>
         </div>
     </div>
 </nav>
