--- a/home.html
+++ b/home.html
@@ -391,12 +391,15 @@
 
     <!-- UPDATED: QUICK LINKS TO EVERY PAGE (NO REMOVALS ELSEWHERE) -->
     <div class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="movement.html">Movement</a>
-        <a href="patchbaby.html">Patch Baby</a>
-        <a href="book.html">The Book</a>
-        <a href="store.html">Store</a>
-        <a href="about.html">About</a>
+            <a href="index.html">Home</a>
+            <a href="movement.html">Movement</a>
+            <a href="patchbaby.html">Patch Baby</a>
+            <a class="featured" href="signature-apparel-premiere.html">Signature Apparel Premiere</a>
+            <a class="featured" href="book.html">The Book</a>
+            <a href="store.html">Store</a>
+            <a href="music.html">MUSIC</a>
+            <a href="about.html">About</a>
+            <a href="checkout.html">Checkout</a>
         <!-- optional music anchor/page link (kept simple) -->
         <a href="about.html#epok-album">Music</a>
     </div>
