--- a/book.html
+++ b/book.html
@@ -801,14 +801,15 @@
 <div class="top-nav">
   <div class="nav-scroll">
     <div class="nav-list">
-      <a href="index.html">HOME</a>
-      <a href="movement.html">MOVEMENT</a>
-      <a href="patchbaby.html">PATCH BABY</a>
-      <a href="book.html">BOOK</a>
-      <a href="store.html">STORE</a>
-      <a href="about.html">ABOUT</a>
-      <a href="music.html">MUSIC</a>
-      <a class="featured" href="signature-apparel-premiere.html">SIGNATURE APPAREL PREMIERE</a>
+       <a href="index.html">Home</a>
+            <a href="movement.html">Movement</a>
+            <a href="patchbaby.html">Patch Baby</a>
+            <a class="featured" href="signature-apparel-premiere.html">Signature Apparel Premiere</a>
+            <a class="featured" href="book.html">The Book</a>
+            <a href="store.html">Store</a>
+            <a href="music.html">MUSIC</a>
+            <a href="about.html">About</a>
+            <a href="checkout.html">Checkout</a>
     </div>
   </div>
 </div>
