--- a/music.html
+++ b/music.html
@@ -470,7 +470,7 @@ html, body {
 <!-- ================= TRACK LIST ================= -->
 <div class="tracklist">
 
-  <div class="track-row"><span>01</span><a href="music/track01.mp3" download>Track Placeholder</a></div>
+  <div class="track-row"><span>01</span><a href="music/Lyrixx6.mp3" download>Track Placeholder</a></div>
   <div class="track-row"><span>02</span><a href="music/track02.mp3" download>Track Placeholder</a></div>
   <div class="track-row"><span>03</span><a href="music/track03.mp3" download>Track Placeholder</a></div>
   <div class="track-row"><span>04</span><a href="music/track04.mp3" download>Track Placeholder</a></div>
