--- a/store.html
+++ b/store.html
@@ -256,6 +256,28 @@ html, body {
   scroll-snap-align: start;  
 }
 
+.add-to-cart {
+  position: absolute;
+  bottom: 12px;
+  left: 12px;
+  right: 12px;
+  text-align: center;
+  border: 1px solid rgba(212,175,55,0.6);
+  padding: 10px 0;
+  font-size: 0.65rem;
+  letter-spacing: 0.28em;
+  text-transform: uppercase;
+  color: #f3d688;
+  text-decoration: none;
+}
+
+.add-to-cart:hover {
+  background: rgba(212,175,55,0.15);
+}
+
+
+
+    
 .placeholder-img {
   width: 100%;
   height: 100%;
@@ -422,7 +444,17 @@ html, body {
   <!-- PATCH BABY JOGGER — WOMEN -->
   <div class="grid-label">PATCH BABY JOGGER — WOMEN</div>
   <div class="product-grid">
-    <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
+    <div class="product-card">
+
+  <div class="placeholder-img">MOCKUP PLACEHOLDER</div>
+
+  <a class="add-to-cart"
+     href="https://YOURSTORE.myshopify.com/cart/ 12213294301502 ">
+     ADD TO CART
+  </a>
+
+</div> 
+
     <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
     <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
     <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
