--- a/store.html
+++ b/store.html
@@ -449,7 +449,7 @@ html, body {
   <div class="placeholder-img">MOCKUP PLACEHOLDER</div>
 
   <a class="add-to-cart"
-     href="https://YOURSTORE.myshopify.com/cart/ 12213294301502 ">
+     href="https://admin.shopify.com/store/epok-8204/products/12213294301502">
      ADD TO CART
   </a>
 
