--- a/store.html
+++ b/store.html
@@ -448,11 +448,13 @@ html, body {
 
   <div class="placeholder-img">MOCKUP PLACEHOLDER</div>
 
-  <a class="add-to-cart"
-     href="https://admin.shopify.com/store/epok-8204/products/12213294301502">
-     ADD TO CART
-  </a>
+<a class="add-to-cart"
+   href="https://epok-8204.myshopify.com/cart/12213294301502">
+  ADD TO CART
+</a>
 
+
+        
 </div> 
 
     <div class="product-card"><div class="placeholder-img">MOCKUP PLACEHOLDER</div></div>
