--- a/store.html
+++ b/store.html
@@ -449,7 +449,7 @@ html, body {
   <div class="placeholder-img">MOCKUP PLACEHOLDER</div>
 
 <a class="add-to-cart"
-   href="https://epok-8204.myshopify.com/cart/52764320760126">
+   href="https://epok-8204.myshopify.com/cart/52764320760126:1">
   ADD TO CART
 </a>
 
