--- a/store.html
+++ b/store.html
@@ -284,12 +284,12 @@ html, body {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 0.6rem;
+  font-size: 0.65rem;
   letter-spacing: 0.28em;
-  text-transform: uppercase;
-  color: #e8e4d8;
-  opacity: 0.7;
+  color: rgba(212,175,55,0.6);
 }
+
+    
 
 .editorial {
   margin: 80px 0;
