--- a/store.html
+++ b/store.html
@@ -289,7 +289,12 @@ html, body {
   color: rgba(212,175,55,0.6);
 }
 
-    
+    .placeholder-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 
 .editorial {
   margin: 80px 0;
@@ -446,7 +451,9 @@ html, body {
   <div class="product-grid">
     <div class="product-card">
 
-  <div class="placeholder-img">MOCKUP PLACEHOLDER</div>
+  <div class="placeholder-img">
+  <img src="images/mockup-placeholder.png" alt="Product mockup">
+</div>
 
 <a class="add-to-cart"
    href="https://epok-8204.myshopify.com/cart/52764320760126:1">
