--- a/store.html
+++ b/store.html
@@ -452,7 +452,7 @@ html, body {
     <div class="product-card">
 
   <div class="placeholder-img">
-  <img src="images/mockup-placeholder.png" alt="Product mockup">
+ <img src="https://via.placeholder.com/600x800?text=PATCH+BABY+JOGGER" alt="Product mockup">
 </div>
 
 <a class="add-to-cart"
