--- a/store.html
+++ b/store.html
@@ -400,7 +400,29 @@ html, body {
 }
 
 
-    
+   /* === DEBUG MOCKUP VISIBILITY (SAFE) === */
+.product-card {
+  position: relative;
+}
+
+.placeholder-img {
+  position: relative;
+  min-height: 100%;
+  background: rgba(212,175,55,0.08);
+}
+
+.placeholder-img::after {
+  content: "MOCKUP";
+  position: absolute;
+  inset: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.75rem;
+  letter-spacing: 0.4em;
+  color: rgba(212,175,55,0.85);
+}
+ 
 
     
 </style>
