--- a/store.html
+++ b/store.html
@@ -473,7 +473,7 @@ html, body {
   <div class="product-grid">
     <div class="product-card">
 
-  <div class="placeholder-img">
+  <div class="ModelPictures/Panthers&vampiresjogger/V&ppompombeanie.png">
  <img src="https://via.placeholder.com/600x800?text=PATCH+BABY+JOGGER" alt="Product mockup">
 </div>
 
