--- a/checkout.html
+++ b/checkout.html
@@ -209,7 +209,18 @@ html, body {
     <div class="page-inner">
 
         <!-- PAGE CONTENT START -->
-        <!-- SECTIONS WILL BE INSERTED HERE -->
+
+        
+    <section class="checkout-section">
+  <h1>Checkout</h1>
+  <p>You’re almost there.</p>
+
+  <a class="checkout-button"
+     href="https://epok-8204.myshopify.com/checkout">
+    PROCEED TO SECURE CHECKOUT
+  </a>
+</section>
+
         <!-- PAGE CONTENT END -->
 
     </div>
