--- a/store.html
+++ b/store.html
@@ -450,14 +450,9 @@ html, body {
     <div class="page-inner">
 
 <!-- ================= WINTER DROP ================= -->
-<section class="store-section" id="winter-drop">
 
-  <!-- HERO / INTRO PLACEHOLDER -->
-  <div class="section-banner">
-    WINTER DROP — HERO IMAGE PLACEHOLDER
-    <small>Replace with campaign imagery</small>
-  </div>
 
+        
   <!-- WOMEN -->
 <!-- ================= WINTER DROP ================= -->
 <section class="store-section" id="winter-drop">
@@ -468,13 +463,15 @@ html, body {
     <small>Replace with campaign imagery</small>
   </div>
 
+
+    
   <!-- PATCH BABY JOGGER — WOMEN -->
   <div class="grid-label">PATCH BABY JOGGER — WOMEN</div>
   <div class="product-grid">
     <div class="product-card">
 
-  <div class="ModelPictures/Panthers&vampiresjogger/V&ppompombeanie.png">
- <img src="https://via.placeholder.com/600x800?text=PATCH+BABY+JOGGER" alt="Product mockup">
+ <div class="placeholder-img">
+  <img src="ModelPictures/Panthers&vampiresjogger/V&ppompombeanie.png" alt="Product mockup">
 </div>
 
 <a class="add-to-cart"
