--- a/store.html
+++ b/store.html
@@ -257,10 +257,9 @@ html, body {
 }
 
 .add-to-cart {
-  position: absolute;
-  bottom: 12px;
-  left: 12px;
-  right: 12px;
+  position: static;
+  margin-top: 14px;
+  display: block;
   text-align: center;
   border: 1px solid rgba(212,175,55,0.6);
   padding: 10px 0;
@@ -275,6 +274,13 @@ html, body {
   background: rgba(212,175,55,0.15);
 }
 
+/* PUT THIS RIGHT HERE */
+.product-card {
+  height: auto;
+  padding-bottom: 14px;
+}
+
+
 
 
     
@@ -284,10 +290,9 @@ html, body {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 0.65rem;
-  letter-spacing: 0.28em;
-  color: rgba(212,175,55,0.6);
+  background: #000;
 }
+
 
     .placeholder-img img {
   width: 100%;
@@ -411,17 +416,7 @@ html, body {
   background: rgba(212,175,55,0.08);
 }
 
-.placeholder-img::after {
-  content: "MOCKUP";
-  position: absolute;
-  inset: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 0.75rem;
-  letter-spacing: 0.4em;
-  color: rgba(212,175,55,0.85);
-}
+
  
 
     
